[package]
name = "l3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
tokio = { version = "1", features = [
  "full",
] } # TODO: we probably don't need all features
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
clap = { version = "4.4.11", features = ["derive"] }
humanize-rs = "0.1.5"
serde-humanize-rs = "0.1.1"
